<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="111">
        <com.showeasy.philiptest.view.colorpicker.ColorPickerPreference
            android:key="color1"
            android:title="@string/color1_title"
            android:summary="@string/color1_summary"
            android:defaultValue="0xff000000"/>
        <com.showeasy.philiptest.view.colorpicker.ColorPickerPreference
            android:key="color2"
            android:title="@string/color2_title"
            android:summary="@string/color2_summary"
            android:defaultValue="0xff00ff00"/>
        <com.showeasy.philiptest.view.colorpicker.ColorPickerPreference
            android:key="color3"
            android:title="@string/color3_title"
            android:summary="@string/color3_summary"
            android:defaultValue="0xff00ff00"/>
    </PreferenceCategory>
</PreferenceScreen>